@@ -107,6 +107,40 @@ void LIBNXSRV_EXPORTABLE DestroyArpCache(ARP_CACHE *pArpCache)
 
 
 //
+// Destroy routing table
+//
+
+void LIBNXSRV_EXPORTABLE DestroyRoutingTable(ROUTING_TABLE *pRT)
+{
+   if (pRT != NULL)
+   {
+      safe_free(pRT->pRoutes);
+      free(pRT);
+   }
+}
+
+
+//
+// Route comparision callback
+//
+
+static int CompareRoutes(const void *p1, const void *p2)
+{
+   return -(COMPARE_NUMBERS(((ROUTE *)p1)->dwDestMask, ((ROUTE *)p2)->dwDestMask));
+}
+
+
+//
+// Sort routing table (put most specific routes first)
+//
+
+void LIBNXSRV_EXPORTABLE SortRoutingTable(ROUTING_TABLE *pRT)
+{
+   qsort(pRT->pRoutes, pRT->iNumEntries, sizeof(ROUTE), CompareRoutes);
+}
+
+
+//
 // Load file into memory
 //
 
